crates/hydracache-db/tests/policy/fail_empty_key_segments.stderr
error: query_cache_policy segment list cannot be empty
 --> tests/policy/fail_empty_key_segments.rs:4:19
  |
4 |       let _policy = query_cache_policy!(
  |  ___________________^
5 | |         key_segments = [],
6 | |     );
  | |_____^
  |
  = note: this error originates in the macro `query_cache_policy` (in Nightly builds, run with -Z macro-backtrace for more info)
